<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="400dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    tools:context=".ui.episode.EpisodeFilterFragment">

    <TextView
        android:id="@+id/text_season"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/season"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/season_filter"/>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/season_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:singleSelection="true"
        app:chipSpacingHorizontal="10dp"
        app:layout_constraintTop_toBottomOf="@id/text_season"
        app:layout_constraintBottom_toTopOf="@id/cancel_button">

        <com.google.android.material.chip.Chip
            android:id="@+id/season_one"
            android:layout_width="wrap_content"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/_1"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/season_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:text="@string/_2"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/season_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:text="@string/_3"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/season_four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:text="@string/_4"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/season_five"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:text="@string/_5"/>

    </com.google.android.material.chip.ChipGroup>


    <Button
        android:id="@+id/apply_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/cancel_button"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/apply_button"/>

</androidx.constraintlayout.widget.ConstraintLayout>