<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/characterListFragment">

    <fragment
        android:id="@+id/characterListFragment"
        android:name="com.reanimator.rickormorty.CharacterListFragment"
        android:label="@string/characters"
        tools:layout="@layout/fragment_character_list" />
    <fragment
        android:id="@+id/locationsListFragment"
        android:name="com.reanimator.rickormorty.LocationListFragment"
        android:label="@string/locations"
        tools:layout="@layout/fragment_locations_list" />
    <fragment
        android:id="@+id/episodesListFragment"
        android:name="com.reanimator.rickormorty.EpisodeListFragment"
        android:label="@string/episodes"
        tools:layout="@layout/fragment_episodes_list" />
</navigation>