<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.character.detail.CharacterDetailFragment">

    <com.google.android.material.card.MaterialCardView 
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:cardCornerRadius="4dp"
        android:layout_margin="8dp"
        app:cardElevation="10dp"
        app:strokeColor="@color/cardview_light_background"
        app:strokeWidth="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image"
                android:src="@drawable/ic_character_default"
                android:layout_width="200dp"
                android:scaleType="centerCrop"
                tools:src="@drawable/ic_character_default"
                android:layout_height="match_parent"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp">

            <TextView
                android:id="@+id/name"
                android:textAppearance="?attr/textAppearanceHeadline5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="someName"/>

            <TextView
                android:id="@+id/text_species"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/species"/>

            <TextView
                android:id="@+id/species"
                android:textSize="18sp"
                android:textAppearance="?attr/textAppearanceBody1"
                tools:text="Human"
                android:layout_marginStart="12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/text_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/species"/>

            <TextView
                android:id="@+id/gender"
                android:layout_width="wrap_content"
                tools:text="Male"
                android:textSize="18sp"
                android:layout_marginStart="12dp"
                android:textAppearance="?attr/textAppearanceBody1"
                android:layout_height="wrap_content"/>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/origin_info"
                android:layout_width="match_parent"
                app:cardElevation="8dp"
                android:layout_margin="4dp"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:padding="4dp"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/text_origin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/origin"/>

                    <TextView
                        android:id="@+id/origin"
                        android:layout_width="wrap_content"
                        android:textAppearance="?attr/textAppearanceBody1"
                        android:textSize="18sp"
                        tools:text="Earth"
                        android:layout_marginStart="12dp"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/location_info"
                android:layout_width="match_parent"
                app:cardElevation="8dp"
                android:layout_margin="4dp"
                android:layout_height="wrap_content">

            <LinearLayout
                android:padding="4dp"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <TextView
                android:id="@+id/text_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_location"/>

            <TextView
                android:id="@+id/location"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textSize="18sp"
                tools:text="Hell"
                android:layout_marginStart="12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>


    <include
        android:id="@+id/list_item"
        layout="@layout/fragment_list"/>
</LinearLayout>